SERVER-66458 Positional projection can result in caching incorrect parameterized plan